removed fixed height of project items and aligned item to center

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,9 @@
 }
 
 .items{
-    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: beige;
     border-radius: 15px;
     overflow: hidden;
